force-app/main/default/objects/d4c_Entity__c/d4c_Entity__c.object-meta.xml
<CustomObject>
    <label>NIPR Entity</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIPR Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>