force-app/main/default/objects/d4c_Entity__c/fields/d4c_LargeEntityIndicator__c.field-meta.xml
<CustomField>
    <fullName>d4c_LargeEntityIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this entity requires licensing-only subscriptions due to large payload size exceeding threshold</description>
    <label>Large Entity Indicator</label>
    <type>Checkbox</type>
</CustomField>