force-app/main/default/objects/d4c_Entity__c/fields/d4c_LastNIPRSync__c.field-meta.xml
<CustomField>
    <fullName>d4c_LastNIPRSync__c</fullName>
    <description>Date and time of the last successful NIPR sync for this entity (via Entity Info API or PDB Alert).</description>
    <label>Last NIPR Sync</label>
    <type>DateTime</type>
</CustomField>