force-app/main/default/objects/d4c_Entity__c/fields/d4c_MiddleName__c.field-meta.xml
<CustomField>
    <fullName>d4c_MiddleName__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>