force-app/main/default/objects/d4c_Entity__c/fields/d4c_StateCOID__c.field-meta.xml
<CustomField>
    <fullName>d4c_StateCOID__c</fullName>
    <label>State CO ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>