force-app/main/default/objects/d4c_Entity__c/fields/d4c_Subscription__c.field-meta.xml
<CustomField>
    <fullName>d4c_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>d4c_Subscription__c</referenceTo>
    <relationshipName>Entitys</relationshipName>
    <type>Lookup</type>
</CustomField>