force-app/main/default/objects/d4c_Entity__c/fields/d4c_Type__c.field-meta.xml
<CustomField>
    <fullName>d4c_Type__c</fullName>
    <description>Represents the type of the Entity record.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>